kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cicd-java-maven
  name: cicd-java-maven
  namespace: cicd-java-maven-staging
spec:
  ports:
    - name: cicd-java-maven
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cicd-java-maven
  type: ClusterIP
